--- a/AppRSA/AppRSA.csproj
+++ b/AppRSA/AppRSA.csproj
@@ -56,8 +56,8 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RSA\NumberUtil.cs" />
-    <Compile Include="RSA\RandomBigInteger.cs" />
+    <Compile Include="Utils\NumberUtil.cs" />
+    <Compile Include="Utils\RandomBigInteger.cs" />
     <Compile Include="RSA\RSAKeyInstance.cs" />
     <Compile Include="RSA\RSAPublicKey.cs" />
     <Compile Include="RSA\RSAPrivateKey.cs" />
