--- a/AppRSA/AppRSA.csproj
+++ b/AppRSA/AppRSA.csproj
@@ -56,11 +56,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RSA\RSAKeyGenerator.cs" />
+    <Compile Include="RSA\RSAPrivateKey.cs" />
+    <Compile Include="RSA\RSAPublicKey.cs" />
     <Compile Include="Utils\NumberUtil.cs" />
     <Compile Include="Utils\RandomBigInteger.cs" />
-    <Compile Include="RSA\RSAKeyInstance.cs" />
-    <Compile Include="RSA\RSAPublicKey.cs" />
-    <Compile Include="RSA\RSAPrivateKey.cs" />
+    <Compile Include="Utils\StringUtil.cs" />
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
